= ChangeLog

You can check any breaking changes here.

== v0.5

* Ensure `ServerSocket`'s `read_state` is `read_state::finished` once a request
  is read. Previously this was `read_state::empty`. Go change your loop to wait
  while `socket.read_state() != read_state::finished`.
* Boost requirement raised to 1.66.
* New `BOOST_HTTP_SOCKET_DEFAULT_BODY_COPY_THRESHOLD` macro.
* Add `poly_handler<F>` alternative to `std::function<F>`.
* Rewrite runtime-based polymorphic helpers.
** Names go from `polymorphic_*` to `poly_*`.
** Use `poly_handler<F>` instead `std::function<F>`.
** Add polymorphic helpers for `ClientSocket`.
* Add `socket::async_{read,write}_chunkext`.
* Remove `async_read_trailers()`. This function added no value.